cabal-version:      2.4
name:               aoc
version:            0.1.0.0

author:             Thibault Polge
maintainer:         thibault@thb.lt

executable day1
    main-is:          Main.hs
    other-modules:    Lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      containers
    hs-source-dirs:   app
    default-language: Haskell2010
